SEC-8: Replaced Integer.valueOf(int) calls with new Intgeger(int) for JDK 1.4 compatibility.